Note title spacing, stop addimg empty string items

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -62,7 +62,7 @@
 }
 
 .title-item {
-    margin: 10px auto;
+    margin: 20px auto;
     list-style-type: none;
 }
 
