--- a/public/styles/note.css
+++ b/public/styles/note.css
@@ -66,9 +66,5 @@
     margin: 10px auto;
 }
 
-@media (max-width: 400px) {
-    .single-item {
-        margin-bottom: 10px;
-    }
-}
+
 
