--- a/public/styles/showNote.css
+++ b/public/styles/showNote.css
@@ -23,6 +23,7 @@
     width: 100%;
     height: 60px;
     margin-top: 10px;
+    margin-bottom: 25px;
 }
 
 .singleItem {
@@ -33,6 +34,7 @@
 .title {
     display: flex;
     justify-content: space-evenly;
+    margin: 7px 0;
 }
 
 .edit-delete-btns {
@@ -122,4 +124,10 @@ input[type=checkbox] {
 
 .updatedItem {
     width: 200px;
+}
+
+@media (max-width: 400px) {
+    .single-item {
+        margin-bottom: 25px;
+    }
 }
